--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 .jumbotron.jumbotron-fluid.py-4{
-  height:100px;
+  height:110px;
+}
+
+.top-link{
+  float:left;
+  margin-left:16px;
+  color:black;
+  text-decoration: none;
+  font-size:50px;
 }
