--- a/style.css
+++ b/style.css
@@ -6,6 +6,13 @@
   float:left;
   margin-left:16px;
   color:black;
-  text-decoration: none;
   font-size:50px;
+}
+
+a.top-link:link {
+  text-decoration: none;
+}
+
+a.top-link:hover {
+  color: black;
 }
